examples/valid/33_exception_effect.lane
module Examples.Valid.ExceptionEffect

import Stdlib.Ops.*

import Stdlib.Io.{Io, Write}

effect Exception {
  raise(Int) -> Int
}

fn fail_with_answer() -> Int ! Exception {
  Exception::raise!(42)
}

pub let handled_value : Int = {
  handle fail_with_answer() with {
    Exception::raise(code, resume) => code
  } final value {
    value
  }
}

pub fn answer() -> Unit ! Io {
  if handled_value == 42 {
    Write::println!("42")
  } else {
    Write::println!("bad:42")
  }
}
