examples/invalid/31_effect_alias_duplicate_effect_type_name.lane
module Examples.Invalid.EffectAliasDuplicateEffectTypeName

effect IO {
  read() -> Int
}

type IO = { IO }

pub let answer : Int = 42
